--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.1",
     "express-session": "^1.15.6",
+    "facebook-scrape": "^1.0.0",
+    "fbgraph": "^1.4.1",
     "method-override": "^1.0.2",
     "mongoose": "^4.11.14",
     "passport": "^0.1.18",
