Added mongo session store to DB

--- a/package.json
+++ b/package.json
@@ -11,19 +11,20 @@
     "body-parser": "^1.18.2",
     "cheerio": "latest",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
-    "express": "^4.16.1",
+    "express": "^4.16.2",
     "express-session": "^1.15.6",
     "facebook-scrape": "^1.0.0",
     "fbgraph": "^1.4.1",
     "method-override": "^1.0.2",
-    "moment": "^2.19.2",
-    "mongoose": "^4.11.14",
+    "moment": "^2.20.1",
+    "mongoose": "^4.13.7",
     "ontime": "0.0.3",
     "passport": "^0.1.18",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "redis": "^2.8.0",
-    "request": "latest"
+    "request": "^2.83.0"
   }
 }
